--- a/exampleApp/LongStringLoaderExample/app/src/main/res/layout/activity_main.xml
+++ b/exampleApp/LongStringLoaderExample/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,32 @@
     <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                   android:orientation="vertical">
         <Button
+            android:id="@+id/load_string_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Load OS String"
             android:layout_gravity="center_horizontal"
             android:onClick="showOpenSourceLicencing"/>
+        <Button
+            android:id="@+id/cancel_load_string_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:layout_gravity="center_horizontal"
+            android:enabled="false"
+            android:onClick="cancelShowOpenSourceLicencing"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/timer_text_view"
+            android:gravity="center"
+            android:textSize="26dp"
+            />
 
         <ScrollView
                 android:layout_width="match_parent" android:layout_height="match_parent">
             <LinearLayout
                 android:id="@+id/text_view_layout"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingBottom="@dimen/activity_vertical_margin"
