--- a/exampleApp/LongStringLoaderExample/app/src/main/res/layout/activity_main.xml
+++ b/exampleApp/LongStringLoaderExample/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent" android:layout_height="match_parent">
-    <ProgressBar android:id="@+id/loading_progress" android:layout_width="wrap_content" android:layout_height="wrap_content"
-                 android:layout_centerInParent="true" android:visibility="invisible"/>
+    <RelativeLayout android:id="@+id/loading_layout" android:layout_width="match_parent"
+                  android:layout_height="match_parent" android:visibility="invisible">
+        <ProgressBar android:id="@+id/loading_progress" android:layout_width="wrap_content" android:layout_height="wrap_content"
+                     android:layout_centerInParent="true"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_below="@id/loading_progress"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="26sp"
+            android:text="Loading..."
+        />
+    </RelativeLayout>
     <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                   android:orientation="vertical">
         <Button
@@ -25,7 +36,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/timer_text_view"
             android:gravity="center"
-            android:textSize="26dp"
+            android:textSize="26sp"
             />
 
         <ScrollView
@@ -33,7 +44,7 @@
             <LinearLayout
                 android:id="@+id/text_view_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
