--- a/exampleApp/LongStringLoaderExample/app/src/main/res/layout/activity_main.xml
+++ b/exampleApp/LongStringLoaderExample/app/src/main/res/layout/activity_main.xml
@@ -17,17 +17,24 @@
     <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                   android:orientation="vertical">
         <Button
-            android:id="@+id/load_string_button"
+            android:id="@+id/load_string_without_lsl_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Load OS String"
+            android:text="Load Open Source Licence String Without LongStringLoader"
             android:layout_gravity="center_horizontal"
-            android:onClick="showOpenSourceLicencing"/>
+            android:onClick="showOpenSourceLicencingWithoutUsingLsl"/>
+        <Button
+            android:id="@+id/load_string_with_lsl_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Load Open Source Licence String With LongStringLoader"
+            android:layout_gravity="center_horizontal"
+            android:onClick="showOpenSourceLicencingUsingLsl"/>
         <Button
             android:id="@+id/cancel_load_string_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="Cancel LongStringLoader"
             android:layout_gravity="center_horizontal"
             android:enabled="false"
             android:onClick="cancelShowOpenSourceLicencing"/>
