--- a/exampleApp/LongStringLoaderExample/app/src/main/res/layout/activity_main.xml
+++ b/exampleApp/LongStringLoaderExample/app/src/main/res/layout/activity_main.xml
@@ -1,69 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent" android:layout_height="match_parent">
-    <RelativeLayout android:id="@+id/loading_layout" android:layout_width="match_parent"
-                  android:layout_height="match_parent" android:visibility="invisible">
-        <ProgressBar android:id="@+id/loading_progress" android:layout_width="wrap_content" android:layout_height="wrap_content"
-                     android:layout_centerInParent="true"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_below="@id/loading_progress"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="26sp"
-            android:text="Loading..."
-        />
-    </RelativeLayout>
-    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
-                  android:orientation="vertical">
-        <Button
-            android:id="@+id/load_string_without_lsl_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Load Open Source Licence String Without LongStringLoader"
-            android:layout_gravity="center_horizontal"
-            android:onClick="showOpenSourceLicencingWithoutUsingLsl"/>
-        <Button
-            android:id="@+id/load_string_with_lsl_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Load Open Source Licence String With LongStringLoader"
-            android:layout_gravity="center_horizontal"
-            android:onClick="showOpenSourceLicencingUsingLsl"/>
-        <Button
-            android:id="@+id/cancel_load_string_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Cancel LongStringLoader"
-            android:layout_gravity="center_horizontal"
-            android:enabled="false"
-            android:onClick="cancelShowOpenSourceLicencing"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/timer_text_view"
-            android:gravity="center"
-            android:textSize="26sp"
-            />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+              android:orientation="vertical">
+    <Button
+        android:id="@+id/load_string_without_lsl_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Load Open Source Licence String Without LongStringLoader"
+        android:layout_gravity="center_horizontal"
+        android:onClick="showOpenSourceLicencingWithoutUsingLsl"/>
+    <Button
+        android:id="@+id/load_string_with_lsl_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Load Open Source Licence String With LongStringLoader"
+        android:layout_gravity="center_horizontal"
+        android:onClick="showOpenSourceLicencingUsingLsl"/>
 
-        <ScrollView
-                android:layout_width="match_parent" android:layout_height="match_parent">
-            <LinearLayout
-                android:id="@+id/text_view_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/main_text_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"/>
-
-            </LinearLayout>
-        </ScrollView>
-    </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
